--- a/src/main/resources/assets/thiefgame/lang/ko_KR.json
+++ b/src/main/resources/assets/thiefgame/lang/ko_KR.json
@@ -1,5 +1,15 @@
 {
   "key.categories.thiefgame": "숨은 괴도 찾기",
   "key.thiefgame.ability_use_key": "능력 사용",
-  "key.thiefgame.vote_key": "투표창 열기"
+  "key.thiefgame.vote_key": "투표창 열기",
+
+  "gui.vote.title": "투표창",
+  "gui.vote.click": "투표 클릭창",
+  "gui.vote.result": "투표 결과창",
+  "gui.vote.face": "후보자",
+  "gui.vote.skip": "투표 건너뛰기",
+
+  "itemGroup.ThiefGame": "숨은 괴도 찾기",
+
+  "item.thiefgame.votepaper": "투표권"
 }
